[package]
name = "poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
thiserror = "1.0.37"
reqwest = "0.11.12"
clap = {version="4.0.13",features=["derive"]}
futures = "0.3.24"
tokio = {version = "1.21.2",features = ["full"]}
log = "0.4.17"
regex = "1.6.0"
anyhow = "1.0.65"